--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1765,107 +1765,107 @@ stories:
   domain: http://www.thepostandmail.com/
   link: https://www.thepostandmail.com/content/submit-your-elf-shelf-photos
 images:
-- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
-- name: old-granary-field-oldhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crabapple.jpg
-- name: store-on-corner-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kandinsky-bv.jpg
-- name: crow-crow-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-spagetti-accident.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-- name: catacombs-catacombs-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: abandonedbuildings_emily_carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_emily_carr.jpg
-- name: copper-circuit-looking-down-over-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-looking-down-over-city.jpg
-- name: death-valley-death-valley-national-park-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
-- name: oldcabin-store-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
-- name: old-school-house-old-schoolhouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alberto-giacometti.jpg
-- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
-- name: liberty-back-statue-liberty-back-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-graham-sutherland.jpg
-- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-- name: la-muse-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-berline-wall-old-building.jpg
-- name: gears-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: capital-battle-capitolbattle-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-mucha-mult.jpg
-- name: mosaic-face-mosaic-face-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-post-modern.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
-- name: store-on-corner-store-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
-- name: stories-cargo-ship-on-sea-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-constitution.jpg
-- name: berlinwall2-berlinwall-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gan-vogh.jpg
-- name: nazi-invasion-water-fountain-many-shooting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
-- name: store-on-corner-store-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-electricity.jpg
-- name: mistywoods-babyfoot-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
-- name: locked-up-steam-lock-up-steam-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-3.jpg
-- name: nazi-invasion-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-adam-smith-edinburgh.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-- name: christianity-christianity-under-construction-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
-- name: bordercrossing-bordercrossing-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-storm.jpg
-- name: old-granary-field-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-satan-red.jpg
-- name: trucksilo-trucksilo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-post-modern.jpg
-- name: rain-princess-butterfly-on-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-butterfly-on-flower.jpg
-- name: powerlines-power-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-pablo-blue.jpg
-- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
-- name: stalin-time-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-lincoln-sitting-front.jpg
-- name: border-fence-border-fence-on-hill-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dry-skin.jpg
-- name: power-lines-power-lines-empty-space-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
-- name: dc-statue-dcstatue-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-sunday.jpg
-- name: aws-s3-stories-algo-microservices.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
-- name: store-on-corner-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-graham-sutherland.jpg
-- name: bf-skinner-girl-reading-garden-flowers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-girl-reading-garden-flowers.jpg
-- name: old-granary-field-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-circuit.jpg
-- name: adam-smith-adam-smith-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-marcel-duchamp.jpg
-- name: victoria-victoria-corner-hotel-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-aqua.jpg
-- name: paris-paris-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
-- name: stalin-time-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-train-on-tracks.jpg
-- name: nyc-flag-nycflag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag.jpg
-- name: mistywoods-babyfoot-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-purp-paper.jpg
-- name: abe-lincoln-one-sunday-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-15-87.jpg
+- name: gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-internet-numbers.jpg
+- name: old-granary-field-granaryfield-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-bright-sand.jpg
+- name: containership-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit.jpg
+- name: copper-circuit-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hotel-down-sidewalk.jpg
+- name: miamibeach-miamibeach-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crabapple.jpg
+- name: rockingchair-rockingchair-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-light-dali.jpg
+- name: nazi-invasion-do-not-turn-trolley-car.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-do-not-turn-trolley-car.jpg
+- name: legal-statue-legalstatue-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-umberto-bocc.jpg
+- name: bordercrossing-bordercrossing-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sunday.jpg
+- name: stalin-time-old-comuter-wheels-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-comuter-wheels-crypto.jpg
+- name: downtown-los-angeles-downtown-la-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-smoking-cigarette.JPG
+- name: oldroad-old-road-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-constitution.jpg
+- name: curtain-curtain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
+- name: stories-freeway-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-freeway-atari-missle.jpg
+- name: docks-docks-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-pond.jpg
+- name: eduardo-eduardo-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-sand-paper.jpg
+- name: dc-statue-dcstatue-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-wols.jpg
+- name: old-door-lock-old-door-lock-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-constitution.jpg
+- name: server-cloud-server-racks-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-brush.jpg
+- name: catacombs-catacombs-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-4.jpg
+- name: capital-battle-capitolbattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle.jpg
+- name: blossombar-neo-instinct-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
+- name: blossombar-space-pizza-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-50-62.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
+- name: old-gas-pumps-oldgaspumps-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-really-hot.jpg
+- name: castle-wall-DSC-0067-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
+- name: la-muse-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-container-ship-in-seattle.jpg
+- name: walled-garden-walled-garden-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
+- name: art-museum-art-museum-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-marcel-duchamp.jpg
+- name: beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-smoking-cigarette.jpg
+- name: server-cloud-server-racks-door-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
+- name: ellis-island-ellisisland-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
+- name: downtown-los-angeles-downtown-la-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-atari-asteroids.JPG
+- name: bf-skinner-washington-monument-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-washington-monument-afar.jpg
+- name: trucksilo-trucksilo-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-hot-spicy.jpg
+- name: old-cabin-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-circuit.jpg
+- name: curtain-curtain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-matrix.jpg
+- name: aws-s3-square-machine-road-light-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-machine-road-light-dali-square.jpg
+- name: server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-smooth-ride.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+- name: gears-4882162452-fa3126b38d-b-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-deep-connections.jpg
+- name: abandonedbuildings_monet_one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_monet_one.jpg
+- name: paris-paris-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
+- name: aws-s3-stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
+- name: crow-crow-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
+- name: status-berlin-status-berlin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
+- name: paris-paris-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dry-skin.jpg
+- name: stalin-time-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-face-eyes-open-statue.jpg
+- name: stalin-time-do-not-turn-trolley-car.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-do-not-turn-trolley-car.jpg
+- name: oldcabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-really-hot.jpg
+- name: paris-paris-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
 ---
 Boeing's Starliner Off Course In Orbit After Launch Debut.&nbsp;Michigan Company Buys Apartments Off Harrells Ferry Road.&nbsp;Mary Eugenia Castillo Carrasco.&nbsp;Politics Gets Personal With Chapman And Ross.&nbsp;Space Force Will Start Small But Let Trump Claim A Big Win.&nbsp;Body Discovered Near Railroad Tracks Identified.&nbsp;Jon Bon Jovi Among Cory Booker's Top Campaign Fundraisers.&nbsp;Blue Dolphins Host Sanctioned Meet.&nbsp;
